[package]
name = "pagi-cyber-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pagi-cyber-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
sled = "0.34"
# CRITICAL SIBLING PATH DEPENDENCY
pagi-core-lib = { path = "../pagi-core-lib" }
